# hjkl-chat

./: .gitignore  CLAUDE.md  Cargo.toml  config-manual-test.toml  design-tokens.json  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
.ralph-wiggum/: progress.md
.rw-opencode/: opencode.json
backend/: Cargo.toml
backend/migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_registration_sessions.sql
backend/src/: api.rs  config.rs  main.rs  models.rs  providers.rs  tests.rs  use_cases.rs
backend/src/api/: auth_extractor.rs  configurator.rs  endpoints.rs  middleware.rs  response.rs
backend/src/api/endpoints/: auth.rs  auth_change_password.rs  auth_login.rs  auth_me.rs  auth_registration_complete.rs  auth_registration_init.rs  auth_registration_verify.rs  auth_restore_complete.rs  auth_restore_init.rs  auth_restore_verify.rs  auth_update_profile.rs  chat_create.rs  chat_get.rs  chat_get_draft.rs  chat_get_messages.rs  chat_list.rs  chat_models.rs  chat_save_draft.rs  chat_send_message.rs  file_keywords.rs  file_search.rs  file_toc.rs  registration.rs  sync_pull.rs  sync_push.rs  ws.rs
backend/src/middleware/extractors/: auth.rs
backend/src/models/: auth.rs  chat.rs  email.rs  password_restore.rs  registration.rs  session.rs  user.rs
backend/src/providers/: chat_storage.rs  echo_executor.rs  llm.rs  local_filesystem.rs  personalized_chat_storage.rs  personalized_file_storage.rs  pipes.rs  s3.rs  smtp.rs  sqlite.rs  sync_ledger.rs  websocket.rs
backend/src/tests/: integration.rs  test_app.rs  utils.rs
backend/src/tests/integration/: auth_tests.rs  concurrent_tests.rs  isolation_tests.rs  login_service_tests.rs  mailhog_tests.rs  minio_tests.rs  profile_service_tests.rs  registration_service_tests.rs  restore_service_tests.rs  sync_tests.rs
backend/src/use_cases/: auth.rs  change_password.rs  create_chat.rs  extract_facts.rs  get_chat.rs  get_chat_messages.rs  get_draft.rs  get_file_keywords.rs  get_profile.rs  get_toc.rs  list_chats.rs  list_models.rs  login.rs  registration.rs  registration_complete.rs  registration_init.rs  registration_verify.rs  restore_complete.rs  restore_init.rs  restore_verify.rs  save_draft.rs  search_files.rs  send_message.rs  sync_pull.rs  sync_push.rs  update_profile.rs  ws_connect.rs
docs/: RUNNING.md
e2e/: smoke.spec.ts
frontend/: Cargo.toml  Trunk.toml  config.json  index.html
frontend/src/: app.rs  auth_service.rs  auth_state.rs  lib.rs  main.rs  pages.rs  services.rs
frontend/src/components/: auth_link.rs  authentication_button.rs  authentication_input.rs  button.rs  chat_background.rs  chat_bubble.rs  chat_input.rs  conflict_modal.rs  countdown_button.rs  form_description.rs  form_header.rs  login_form.rs  logo.rs  mod.rs  model_selector.rs  password_input.rs  password_login_input.rs  profile_modal.rs  surface.rs  text_input.rs  theme_toggle.rs  user_icon.rs
frontend/src/components/icons/: eye.rs  eye_off.rs  git_merge.rs  menu.rs  mod.rs  paperclip.rs  send.rs
frontend/src/pages/: change_password.rs  chat.rs  file_browser.rs  helpers.rs  login.rs  login_page.rs  mod.rs  profile.rs  registration.rs  registration_input_email.rs  registration_set_password.rs  registration_success.rs  registration_verify_code.rs  restore_input_email.rs  restore_set_password.rs  restore_success.rs  restore_verify_code.rs
frontend/src/services/: auth_service.rs  chat_service.rs  local_storage.rs  mod.rs  search_service.rs  sync_engine.rs  ws_service.rs
frontend/styles/: components.css  tokens.css
frontend/tests/: login_integration_tests.rs
specs/: AUTH-MIDDLEWARE.md  AUTHENTICATION.md  BACKEND.md  DESIGN.md  FILE-STORAGE.md  FRONTEND.md  GENERIC-BACKEND.md  GENERIC-FRONTEND.md  PENPOT-ORGANIZATION.md  PROJECT-STRUCTURE.md  RUST-COMMON-SPEC.md  SEARCH-ENGINE.md  TESTING.md
tests/: config.toml  integration_test.rs  test_utils.rs
user-stories/: 00-bootstrap-and-testing.md  01-login.md  01-registration.md  02-login.md  02-registration.md  03-logout.md  04-password-restore.md  05-password-change.md  06-auth-errors.md  07-files-browser.md  07-new-chat.md  08-chat-history.md  08-new-chat.md  09-chat-history.md  09-save-file.md  10-create-file.md  10-markdown-editor.md  10-save-file.md  11-create-file.md  (+1 more)
(+73 files in other folders)
