[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
actix-rt = "2"
uuid = { version = "1", features = ["v4"] }
aws-sdk-s3 = { version = "1", features = ["rt-tokio"] }
aws-config = "1"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }