[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled", "uuid", "chrono"] }
r2d2 = "0.8"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-s3 = { version = "1", features = ["rt-tokio"] }
aws-config = "1"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
mime = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
rand = "0.8"
async-trait = "0.1"
serde_yaml = "0.9"
actix-ws = "0.3"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
arti-pipes = { git = "https://github.com/stavenko/arti-pipes" }
schemars = "*"
reqwest = { version = "0.11", features = ["json"] }
keyword-extractor = { path = "../common/keyword-extractor" }

[dev-dependencies]
actix-rt = "2"
actix-test = "0.1"
actix-http = "3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
aws-sdk-s3 = { version = "1", features = ["rt-tokio"] }
aws-config = "1"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"