[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = "0.6"
leptos_router = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "RequestInit", "RequestMode", "Headers", "Response", "HtmlInputElement"] }
gloo-net = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
reqwest = { version = "0.11", features = ["wasm-streams", "json"] }
once_cell = "1.19"
thiserror = "1"