[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "RequestInit", "RequestMode", "Headers", "Response", "HtmlElement", "HtmlInputElement", "DomStringMap", "Document"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
once_cell = "1.19"

[dev-dependencies]
wasm-bindgen-test = "0.3"
